crates/pg_syntax/tests/snapshots/postgres_regress/union@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 AS one UNION SELECT 1 ORDER BY 1;
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..15
    ResTarget@7..15
      AConst@7..8
        Iconst@7..8 "1"
      Whitespace@8..9 " "
      As@9..11 "AS"
      Whitespace@11..12 " "
      Ident@12..15 "one"
  Whitespace@15..16 " "
  Union@16..21 "UNION"
  Whitespace@21..22 " "
  SelectStmt@22..30
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    ResTarget@29..30
      AConst@29..30
        Iconst@29..30 "1"
  Whitespace@30..31 " "
  SortBy@31..41
    Order@31..36 "ORDER"
    Whitespace@36..37 " "
    By@37..39 "BY"
    Whitespace@39..40 " "
    AConst@40..41
      Iconst@40..41 "1"
  Ascii59@41..42 ";"

