crates/pg_syntax/tests/snapshots/postgres_regress/union@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f1 AS nine FROM FLOAT8_TBL\nUNION\nSELECT f1 FROM INT4_TBL\nORDER BY 1;"
---
SelectStmt@0..75
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..33
    ResTarget@7..17
      ColumnRef@7..9
        Ident@7..9 "f1"
      Whitespace@9..10 " "
      As@10..12 "AS"
      Whitespace@12..13 " "
      Ident@13..17 "nine"
    Whitespace@17..18 " "
    From@18..22 "FROM"
    Whitespace@22..23 " "
    RangeVar@23..33
      Ident@23..33 "FLOAT8_TBL"
  Newline@33..34 "\n"
  Union@34..39 "UNION"
  Newline@39..40 "\n"
  SelectStmt@40..63
    Select@40..46 "SELECT"
    Whitespace@46..47 " "
    ResTarget@47..49
      ColumnRef@47..49
        Ident@47..49 "f1"
    Whitespace@49..50 " "
    From@50..54 "FROM"
    Whitespace@54..55 " "
    RangeVar@55..63
      Ident@55..63 "INT4_TBL"
  Newline@63..64 "\n"
  SortBy@64..74
    Order@64..69 "ORDER"
    Whitespace@69..70 " "
    By@70..72 "BY"
    Whitespace@72..73 " "
    AConst@73..74
      Iconst@73..74 "1"
  Ascii59@74..75 ";"

