crates/pg_syntax/tests/snapshots/postgres_regress/union@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT q2 FROM int8_tbl INTERSECT ALL SELECT q1 FROM int8_tbl ORDER BY 1;
---
SelectStmt@0..73
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..23
    ResTarget@7..9
      ColumnRef@7..9
        Ident@7..9 "q2"
    Whitespace@9..10 " "
    From@10..14 "FROM"
    Whitespace@14..15 " "
    RangeVar@15..23
      Ident@15..23 "int8_tbl"
  Whitespace@23..24 " "
  Intersect@24..33 "INTERSECT"
  Whitespace@33..34 " "
  All@34..37 "ALL"
  Whitespace@37..38 " "
  SelectStmt@38..61
    Select@38..44 "SELECT"
    Whitespace@44..45 " "
    ResTarget@45..47
      ColumnRef@45..47
        Ident@45..47 "q1"
    Whitespace@47..48 " "
    From@48..52 "FROM"
    Whitespace@52..53 " "
    RangeVar@53..61
      Ident@53..61 "int8_tbl"
  Whitespace@61..62 " "
  SortBy@62..72
    Order@62..67 "ORDER"
    Whitespace@67..68 " "
    By@68..70 "BY"
    Whitespace@70..71 " "
    AConst@71..72
      Iconst@71..72 "1"
  Ascii59@72..73 ";"

