crates/pg_syntax/tests/snapshots/postgres_regress/union@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT q2 FROM int8_tbl EXCEPT SELECT q1 FROM int8_tbl ORDER BY 1;
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..23
    ResTarget@7..9
      ColumnRef@7..9
        Ident@7..9 "q2"
    Whitespace@9..10 " "
    From@10..14 "FROM"
    Whitespace@14..15 " "
    RangeVar@15..23
      Ident@15..23 "int8_tbl"
  Whitespace@23..24 " "
  Except@24..30 "EXCEPT"
  Whitespace@30..31 " "
  SelectStmt@31..54
    Select@31..37 "SELECT"
    Whitespace@37..38 " "
    ResTarget@38..40
      ColumnRef@38..40
        Ident@38..40 "q1"
    Whitespace@40..41 " "
    From@41..45 "FROM"
    Whitespace@45..46 " "
    RangeVar@46..54
      Ident@46..54 "int8_tbl"
  Whitespace@54..55 " "
  SortBy@55..65
    Order@55..60 "ORDER"
    Whitespace@60..61 " "
    By@61..63 "BY"
    Whitespace@63..64 " "
    AConst@64..65
      Iconst@64..65 "1"
  Ascii59@65..66 ";"

