crates/pg_syntax/tests/snapshots/postgres_regress/union@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 AS two UNION ALL SELECT 2;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..15
    ResTarget@7..15
      AConst@7..8
        Iconst@7..8 "1"
      Whitespace@8..9 " "
      As@9..11 "AS"
      Whitespace@11..12 " "
      Ident@12..15 "two"
  Whitespace@15..16 " "
  Union@16..21 "UNION"
  Whitespace@21..22 " "
  All@22..25 "ALL"
  Whitespace@25..26 " "
  SelectStmt@26..34
    Select@26..32 "SELECT"
    Whitespace@32..33 " "
    ResTarget@33..34
      AConst@33..34
        Iconst@33..34 "2"
  Ascii59@34..35 ";"

