crates/pg_syntax/tests/snapshots/postgres_regress/union@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT q2 FROM int8_tbl EXCEPT ALL SELECT DISTINCT q1 FROM int8_tbl ORDER BY 1;
---
SelectStmt@0..79
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..23
    ResTarget@7..9
      ColumnRef@7..9
        Ident@7..9 "q2"
    Whitespace@9..10 " "
    From@10..14 "FROM"
    Whitespace@14..15 " "
    RangeVar@15..23
      Ident@15..23 "int8_tbl"
  Whitespace@23..24 " "
  Except@24..30 "EXCEPT"
  Whitespace@30..31 " "
  All@31..34 "ALL"
  Whitespace@34..35 " "
  SelectStmt@35..67
    Select@35..41 "SELECT"
    Whitespace@41..42 " "
    Distinct@42..50 "DISTINCT"
    Whitespace@50..51 " "
    ResTarget@51..53
      ColumnRef@51..53
        Ident@51..53 "q1"
    Whitespace@53..54 " "
    From@54..58 "FROM"
    Whitespace@58..59 " "
    RangeVar@59..67
      Ident@59..67 "int8_tbl"
  Whitespace@67..68 " "
  SortBy@68..78
    Order@68..73 "ORDER"
    Whitespace@73..74 " "
    By@74..76 "BY"
    Whitespace@76..77 " "
    AConst@77..78
      Iconst@77..78 "1"
  Ascii59@78..79 ";"

